[gd_scene load_steps=10 format=3 uid="uid://xdtlyycc54ax"]

[ext_resource type="Script" path="res://character_select.gd" id="1_xd0fg"]
[ext_resource type="FontFile" uid="uid://ddqfk4sjejx7w" path="res://images/Retro Gaming.ttf" id="2_3jxrm"]

[sub_resource type="Animation" id="Animation_o08mn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_wpq84"]
resource_name = "fadein"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dsm7w"]
resource_name = "fadeout"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1.31951, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kginj"]
_data = {
"RESET": SubResource("Animation_o08mn"),
"fadein": SubResource("Animation_wpq84"),
"fadeout": SubResource("Animation_dsm7w")
}

[sub_resource type="Animation" id="Animation_sdx68"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.196078, 0.188235, 0.180392, 1)]
}

[sub_resource type="Animation" id="Animation_2u3ny"]
resource_name = "flash"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.7, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.196078, 0.188235, 0.180392, 1), Color(0.32549, 0.313726, 0.301961, 1), Color(0.494118, 0.396078, 0.0745098, 1), Color(0.666667, 0.521569, 0, 1), Color(0.87451, 0.686275, 0, 1), Color(0.937255, 0.737255, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5p76t"]
_data = {
"RESET": SubResource("Animation_sdx68"),
"flash": SubResource("Animation_2u3ny")
}

[node name="CharacterSelect" type="Node2D"]
script = ExtResource("1_xd0fg")
chosen_color = Color(0.988235, 0, 0.392157, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -34.0
offset_top = -29.0
offset_right = 1188.0
offset_bottom = 685.0
size_flags_vertical = 8
color = Color(0.121569, 0.25098, 0.360784, 1)

[node name="Sprites" type="Node2D" parent="."]

[node name="FadeWhite" type="ColorRect" parent="."]
z_index = 2
offset_left = -92.0
offset_top = -57.0
offset_right = 1212.0
offset_bottom = 731.0
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeWhite"]
libraries = {
"": SubResource("AnimationLibrary_kginj")
}

[node name="StartPrompt" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 216.0
offset_top = 527.0
offset_right = 937.0
offset_bottom = 577.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.196078, 0.188235, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("2_3jxrm")
theme_override_font_sizes/font_size = 32
text = "Press START to confront your fate"

[node name="AnimationPlayer" type="AnimationPlayer" parent="StartPrompt"]
libraries = {
"": SubResource("AnimationLibrary_5p76t")
}

[connection signal="animation_finished" from="FadeWhite/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
